--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -2,6 +2,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".IndexActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -10,7 +12,9 @@
         android:layout_height="200dp"
         android:src="@drawable/navheader"
         android:scaleType="centerCrop" />
+
     <TextView
+        android:id="@+id/lblUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nombre"
